--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -55,7 +55,7 @@ en:
         description: 'Description'
         active: 'IsActive'
     booking:
-      header: 'Booking'
+      header: 'Bookings'
       vaccine_name: 'Vaccine Name'
       guid: 'Guid'
       pin: 'Pin'
@@ -64,6 +64,20 @@ en:
       ip_address: 'IP'
       browser_name: 'Browser'
       os_name: 'Operating System'
+      edit_patient: 'Edit Patient'
+    patient:
+      header: 'Patients'
+      first_name: 'First Name'
+      last_name: 'Last Name'
+      birth_date: 'Birth date'
+      pin: 'Pin'
+      non_resident: 'Foreigner'
+      mobile_phone: 'Mobile Phone'
+      email: 'E-mail'
+      created_at: 'Created At'
+      updated_at: 'Updated At'
+      update_button: 'Update'
+      updated: 'Patient was successfully updated.'
     panel:
       header: 'Admin Panel'
       users: 'Total Users -'
